--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.9"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 }
